--- a/frontend/src/_animations.scss
+++ b/frontend/src/_animations.scss
@@ -1,16 +1,48 @@
 @keyframes spin {
-    from {
-        transform: rotate(0deg);
-    }
-    to {
-        transform: rotate(720deg);
-    }
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(720deg);
+  }
 }
+
 @keyframes spin-back {
-    from {
-        transform: rotate(720deg);
-    }
-    to {
-        transform: rotate(0deg);
-    }
+  from {
+    transform: rotate(720deg);
+  }
+  to {
+    transform: rotate(0deg);
+  }
+}
+
+@keyframes pop-up {
+  0% {
+    transform: scale(0);
+  }
+  50% {
+    transform: scale(1.5);
+  }
+  100% {
+    transform: scale(1);
+    visibility: visible;
+  }
+}
+
+@keyframes expand {
+  from {
+    width: 300px;
+  }
+  to {
+    width: 0px;
+  }
+}
+
+@keyframes un-expand {
+  from {
+    max-width: 0px;
+  }
+  to {
+    max-width: 300px;
+  }
 }
