--- a/frontend/src/components/nav/_nav.scss
+++ b/frontend/src/components/nav/_nav.scss
@@ -1,26 +1,63 @@
-@import '../../animations';
+@import "../../animations";
 
 #left-corner-nav-button {
-    width: 40px;
-    height: 40px;
-    position: fixed;
-    top: 25px;
-    left: 25px;
+  max-width: 45px;
+  height: auto;
+  position: fixed;
+  top: 25px;
+  left: 25px;
+  visibility: hidden;
+  animation: pop-up forwards;
+  animation-duration: 0.35s;
+  animation-delay: 0.5s;
+  animation-timing-function: ease-in-out;
 
-    svg {
-        width: 100%;
-        height: 100%;
+  svg {
+    &:hover {
+      cursor: pointer;
     }
-    svg.inactive {
-        animation: spin-back;
-        animation-duration: 1s;
-        animation-timing-function: ease-in-out;
+    width: 100%;
+    height: 100%;
+  }
+  svg.inactive {
+    animation: spin-back;
+    animation-duration: 1s;
+    animation-timing-function: ease-in-out;
+  }
+  svg.active {
+    animation: spin backwards;
+    animation-duration: 1s;
+    animation-timing-function: ease-in-out;
+  }
+
+  #nav-list {
+    position: absolute;
+    top: 0;
+    left: 60px;
+    display: flex;
+    overflow: hidden;
+    padding-inline-start: 0;
+
+    &:hover {
+      cursor: pointer;
     }
-    svg.active {
-        animation: spin backwards;
-        animation-duration: 1s;
-        animation-timing-function: ease-in-out;
+    &.show {
+      animation: expand forwards;
+      animation-duration: 1.2s;
+      animation-timing-function: ease-in-out;
     }
-    
-    
+    &.unshow {
+      animation: un-expand;
+      animation-duration: 1.2s;
+      animation-timing-function: ease-in-out;
+    }
+
+    .nav-item {
+      list-style: none;
+      &:not(:first-child) {
+        margin-left: 16px;
+      }
+      font-size: medium;
+    }
+  }
 }
